# sistema-rpg-anime

./: .firebaserc  .gitignore  AI_RULES.md  database.rules.json  firebase.json  package-lock.json  package.json  prompt-decomposicao-gemini.md  storage.rules
.claude/: CLAUDE.md
.claude/agents/: code-review.md  qa.md  research.md
.claude/commands/: qa.md  review.md
.github/workflows/: deploy.yml
app/: app.js  electron.cjs  electron.js  index.html  package-lock.json  package.json  vite.config.js
app/components/: acerto.js  arsenal.js  ataque.js  defesa.js  elementos.js  feed.js  ficha.js  map.js  perfil.js  poderes.js  status.js  tabs.js
app/core/: attributes.js  engine.js  prestige.js  utils.js
app/css/: styles.css
app/services/: firebase-config.js  firebase-sync.js
app/src/: App.jsx  main.jsx  plasmic-host.jsx  plasmic-init.js  plasmic-wrappers.jsx
app/src/__tests__/: AppShell.test.jsx  attributes-core.test.js  attributes-inventario.test.js  attributes.test.js  calcularCA.test.js  config-publico.test.js  cores-persistence.test.js  efeitos-resolver.test.js  engine.test.js  formas-integration.test.js  ia-integration.test.js  jukebox-rules.test.js  layout.test.js  plasmic-integration.test.js  plasmic-styling.test.jsx  prestige.test.js  store.test.js  temas.test.js  (+3 more)
app/state/: store.js
functions/: index.js  package-lock.json  package.json  vitest.config.js
functions/__tests__/: index.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tools/: banco_de_dados_rpg.json  migrar-firebase.js  package.json  servidor.js
(+115 files in other folders)
