[package]
name = "sistema-rpg-anime"
version = "2.0.0"
description = "Sistema RPG Anime com Firebase"
authors = ["RPG Studio"]
license = ""
repository = ""
default-run = "sistema-rpg-anime"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
